--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -129,6 +129,13 @@ li:hover {
 
 /* Filters */
 
+
+.flexCenter {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .filters {
 	height: 139px;
 	grid-gap: 10px;
@@ -136,7 +143,7 @@ li:hover {
 
 .btn_filters {
 	border: solid #1D6154 1px;
-	border-radius: 25px;
+	border-radius: 60px;
 	color: #1D6154;
 	height: 37px;
 	padding: 9px 0 9px 0;
