--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -91,9 +91,17 @@ nav ul {
 	cursor: pointer;
 
 }
+nav ul a {
+	text-decoration: none;
+	color: #000000;
+}
+nav ul a:hover{
+	color: #B1663C;
+}
 nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
+	
 }
 
 li:hover {
