--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -111,7 +111,7 @@ li:hover {
 	display: flex;
 	align-items: center;
 }
-#introduction figure {
+#introduction div {
 	flex: 1
 }
 #introduction img {
