--- a/FrontEnd/assets/modal.css
+++ b/FrontEnd/assets/modal.css
@@ -52,3 +52,33 @@
   max-width: 80%;
   margin: 0 auto;
 }
+
+.image-container {
+  position: relative;
+}
+
+
+.fa-trash-can {
+  cursor: pointer;
+  position: absolute;
+  top: 1px;
+  right: 1px;
+  color: white;
+  background-color: black;
+  padding: 5px;
+}
+
+.modal-content span {
+	font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  cursor: pointer;
+}
+
+.modal-content .close {
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 35px;
+}
