--- a/FrontEnd/assets/modal.css
+++ b/FrontEnd/assets/modal.css
@@ -197,3 +197,49 @@ line-height: 17px;
   font-size: 14px;
   line-height: 16px;
 }
+
+
+.picture {
+  justify-content: space-evenly;
+  align-items: center;
+  height: 160px;
+  width: 380px;
+  background: rgba(232, 241, 246, 1);
+  border-radius: 3px;
+}
+.picture img {
+  color: rgba(185, 197, 204, 0.8);
+  width: 14%;
+  opacity: 0.4;
+}
+.picture .picture_input {
+  height: 31px;
+  width: 41%;
+  border-radius: 25px;
+  background: rgba(203, 214, 220, 1);
+  color: rgba(48, 102, 133, 1);
+  font-family: "Work Sans";
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0em;
+}
+.picture .picture_input input[type="file"] {
+  display: none;
+}
+
+.picture {
+  padding: 30px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.picture_input:hover {
+  cursor: pointer;
+}
+
+
